RESOLVED FIXED56943
CSS3 nth-child(n) selector fails
https://bugs.webkit.org/show_bug.cgi?id=56943
Summary CSS3 nth-child(n) selector fails
Ian Ellison-Taylor
Reported 2011-03-23 11:41:04 PDT
Created attachment 86654 [details] nth-child(n) test case The nth-child(n) CSS3 test fails although nth-child(1n) passes. See the attached test, the background for the 4 elements should be red.
Attachments
nth-child(n) test case (533 bytes, text/html)
2011-03-23 11:41 PDT, Ian Ellison-Taylor
no flags
Simpler test case (224 bytes, text/html)
2011-03-23 11:49 PDT, Ian Ellison-Taylor
no flags
Patch. (3.98 KB, patch)
2011-04-30 21:03 PDT, Yael
no flags
Ian Ellison-Taylor
Comment 1 2011-03-23 11:49:42 PDT
Created attachment 86658 [details] Simpler test case Added a simpler test from Tab, text in the test should be green
Lea Verou
Comment 2 2011-04-02 07:46:15 PDT
FWIW, here's another testcase: http://jsfiddle.net/leaverou/Cum32/
Yael
Comment 3 2011-04-30 21:03:05 PDT
Eric Seidel (no email)
Comment 4 2011-05-01 09:44:55 PDT
Comment on attachment 91811 [details] Patch. OK.
Eric Seidel (no email)
Comment 5 2011-05-01 09:45:30 PDT
The spec link in the ChangeLog or source would have been nice. :) Also generally our test cases use 4-space indent (like the rest of our code), but it's not a big deal.
WebKit Commit Bot
Comment 6 2011-05-01 10:08:37 PDT
Comment on attachment 91811 [details] Patch. Clearing flags on attachment: 91811 Committed r85416: <http://trac.webkit.org/changeset/85416>
WebKit Commit Bot
Comment 7 2011-05-01 10:08:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.