2011-05-01  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Eric Seidel.

        CSS3 nth-child(n) selector fails
        https://bugs.webkit.org/show_bug.cgi?id=56943

        * fast/css/nth-child-n-expected.txt: Added.
        * fast/css/nth-child-n.html: Added.
2011-05-01  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Eric Seidel.

        CSS3 nth-child(n) selector fails
        https://bugs.webkit.org/show_bug.cgi?id=56943

        Regression from r75158.
        "n" is a valid parameter to nth() and should be allowed.

        Test: fast/css/nth-child-n.html

        * css/CSSParser.cpp:
        (WebCore::isValidNthToken):

Canonical link: https://commits.webkit.org/75121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85416 268f45cc-cd09-0410-ab3c-d52691b4dbfc